syntax = "proto3";

package types;

option go_package = "github.com/tinyci/ci-agents/ci-gen/grpc/types";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

import "github.com/tinyci/ci-agents/ci-gen/grpc/types/ref.proto";
import "github.com/tinyci/ci-agents/ci-gen/grpc/types/user.proto";

message Submission {
  int64                     id        = 1; // ID of the submission
  types.Ref                 headRef   = 2; // Head git ref of the submission
  types.Ref                 baseRef   = 3; // Base git ref of the submission
  types.User                user      = 4; // User who submitted it
  google.protobuf.Timestamp createdAt = 5; // When it was submitted
}

message SubmissionList {
  repeated Submission submissions = 1;
}
